--- a/webapp/app/config/routing.yml
+++ b/webapp/app/config/routing.yml
@@ -1,3 +1,2 @@
 app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+    resource: "@AcmeNewsBundle/Resources/config/routing.yml"
