--- a/webapp/src/Acme/NewsBundle/Resources/config/services.yml
+++ b/webapp/src/Acme/NewsBundle/Resources/config/services.yml
@@ -2,4 +2,11 @@ services:
 
     acme_news_manager:
         class: Acme\NewsBundle\Service\AcmeNewsManager
-        arguments: [ "@=service('doctrine').getRepository('AcmeNewsBundle:News')", "@memcached"]
+        factory: [ 'Acme\NewsBundle\Factory\AcmeNewsManagerFactory', createNewsManager ]
+        arguments:
+          - "@=service('doctrine').getRepository('AcmeNewsBundle:News')"
+          - "%acme_news.news_per_page.html%"
+          - "%acme_news.news_per_page.xml%"
+          - "%acme_news.news_per_page.in_block%"
+          - "%acme_news.memcached.enabled%"
+          - "@=container.hasDefinition(parameter('acme_news.memcached.service_name)) ? service(parameter('acme_news.memcached.service_name)) : null"
