--- a/webapp/app/config/parameters.yml.dist
+++ b/webapp/app/config/parameters.yml.dist
@@ -7,6 +7,10 @@ parameters:
     database_name:     symfony
     database_user:     root
     database_password: ~
+    charset:  utf8mb4
+    default_table_options:
+        charset: utf8mb4
+        collate: utf8mb4_unicode_ci
     # You should uncomment this if you want use pdo_sqlite
     # database_path: "%kernel.root_dir%/data.db3"
 
