Added NewsRepositoryTest and AcmeNewsManagerTest

--- a/webapp/src/Acme/NewsBundle/Resources/config/services.yml
+++ b/webapp/src/Acme/NewsBundle/Resources/config/services.yml
@@ -9,4 +9,4 @@ services:
           - "%acme_news.news_per_page.xml%"
           - "%acme_news.news_per_page.in_block%"
           - "%acme_news.memcached.enabled%"
-          - "@=container.hasDefinition(parameter('acme_news.memcached.service_name')) ? service(parameter('acme_news.memcached.service_name')) : null"
+          - "@=container.has(parameter('acme_news.memcached.service_name')) ? service(parameter('acme_news.memcached.service_name')) : null"
