--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,9 +72,9 @@ swiftmailer:
 
 acme_news:
   news_per_page:          # Required
-      html:   10              # Required. Min 1, max 100
+      html:   5              # Required. Min 1, max 100
       xml:    10              # Required. Min 1, max 100
-      in_block: 5             # Required. Min 1, max 20
+      in_block: 5             # News in supplemental block. Required. Min 1, max 20
   memcached:              # If not set counts as disabled
     enabled:      false       # default
     service_name: 'memcached' # default
