--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,8 +72,8 @@ swiftmailer:
 
 acme_news:
   news_per_page:          # Required
-      html:   5              # Required. Min 1, max 100
-      xml:    10              # Required. Min 1, max 100
+      html:   5              # News per one HTML news list page. Required. Min 1, max 100
+      xml:    10              # News per one XML news list page. Required. Min 1, max 100
       in_block: 5             # News in supplemental block. Required. Min 1, max 20
   memcached:              # If not set counts as disabled
     enabled:      false       # default
